--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!-- AR.js by @jerome_etienne - github: https://github.com/jeromeetienne/ar.js - info: https://medium.com/arjs/augmented-reality-in-10-lines-of-html-4e193ea9fdbf -->
-<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
-<script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-<body style='margin : 0px; overflow: hidden;'>
-	<a-scene embedded arjs='sourceType: webcam;'>
-		<!--<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
-		
-		<a-entity obj-model="obj: url(https://raw.githubusercontent.com/brioluk/AR_Tests/master/scene.obj); mtl: url(https://raw.githubusercontent.com/brioluk/AR_Tests/master/scene.mtl)"></a-entity>
-		
-		<a-marker-camera type='pattern' url='https://raw.githubusercontent.com/brioluk/AR_Tests/master/LooksReal_Marker.patt'></a-marker-camera>
-		<!--<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
-	</a-scene>
-</body>
+<html>
+	<head>
+	</head>
+	
+	<!-- AR.js by @jerome_etienne - github: https://github.com/jeromeetienne/ar.js - info: https://medium.com/arjs/augmented-reality-in-10-lines-of-html-4e193ea9fdbf -->
+	<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+	<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
+	<script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+	<body style='margin : 0px; overflow: hidden;'>
+		<a-scene embedded arjs='sourceType: webcam;'>
+			<!--<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
+
+			<a-entity obj-model="obj: url(https://raw.githubusercontent.com/brioluk/AR_Tests/master/scene.obj); mtl: url(https://raw.githubusercontent.com/brioluk/AR_Tests/master/scene.mtl)"></a-entity>
+
+			<a-marker-camera type='pattern' url='https://raw.githubusercontent.com/brioluk/AR_Tests/master/LooksReal_Marker.patt'></a-marker-camera>
+			<!--<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
+		</a-scene>
+	</body>
+
+</html>
