--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 	
 	<body style='margin : 0px; overflow: hidden;'>
 		
-		<!--<a-scene embedded arjs='sourceType: webcam;'>
+		<a-scene embedded arjs='sourceType: webcam;'>
 			
 			<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 			
 			<a-marker-camera type='pattern' url='https://raw.githubusercontent.com/brioluk/AR_Tests/master/LooksReal_Marker.patt'>
 			
-				<a-entity
+				<!--<a-entity
 				gltf-model-next="src: url(https://raw.githubusercontent.com/brioluk/AR_Tests/master/CubeStatic.gltf);"
 				>
-				</a-entity>
+				</a-entity>-->
 			
 			</a-marker-camera>
 			
-		</a-scene>-->
+		</a-scene>
 		
 	</body>
 
